Review UI with updated colors and features

--- a/UI/main/Messaging/messaging.html
+++ b/UI/main/Messaging/messaging.html
@@ -32,14 +32,14 @@
         <div class="chats col s12 no-padding">
             <!-- Top  -->
             <div class="user-profile">
-                <div class ="profile-image circle">
+                <div class ="user-profile-image circle">
                     <img src="../messaging-icon.png" class="responsive-img circle profile-picture" alt="Profile">
                 </div>
 
                 <div class="title">
-                    <h5 class="profile-title-text">Profile of the Group</h4>
+                    <h5 class="profile-title-text" id="profile-title">Profile of the Group</h4>
                 </div>
-                <div class="more" id="more-display-menu"></div>
+                <!-- <div class="more" id="more-display-menu"></div> -->
             </div>
             <!-- Middle -->
             <div class="message-display" id = "message-display">
