Updated the UI and the chat protocl

--- a/UI/main/Messaging/messaging.html
+++ b/UI/main/Messaging/messaging.html
@@ -45,7 +45,7 @@
             <div class="message-display" id = "message-display">
                 <div class = "message-object" id="message-object">
                     <div class ="message-profile-image circle">
-                        <img src="../messaging-icon.png" class="responsive-img circle profile-picture" alt="Profile">
+                        <img src="../messaging-icon.png"  id = 'profile-img' class="responsive-img circle profile-picture" alt="Profile">
                     </div>
                     <div class="message-bubble">
                         <p class="message-sender">Sthembiso Musana</p>
