The new Sign up page styles ....

--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -12,7 +12,7 @@
     <div class="signup" id='signup'>
         <div class='signup-form container'>
             <form class='form' id ='signip-form' autocomplete="off">
-                <input for="email" placeholder="Username" type="text" class="browser-default field" required/><br />
+                <input for="email" placeholder="username" type="text" class="browser-default field" required/><br />
                 <input type='email' placeholder="email" class='browser-default field' required/><br />
                 <input type='password' placeholder="password" class='browser-default field' required/><br />
                 <input type='password' placeholder="confirm password" class="browser-default field" required />
