The latest commit

--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -28,7 +28,10 @@
 
 
     <div id="login" class="container">
-        <div class="spinner center verticalCenter"></div>
+        <div class="spinner-cont">
+            <div class="spinner center verticalCenter"></div>
+        </div>
+        
         <div class='signup-form container'>
             <form class='form' id='login-form' autocomplete="off">
                 <input name = "email" placeholder="email" type="text" class="browser-default field field1" required/><br />
