--- a/UI/main/Messaging/messaging.html
+++ b/UI/main/Messaging/messaging.html
@@ -123,24 +123,17 @@
             </div>
 
             <div class="profile-view-group-info">
-                <h5 class="info-title">Group Info</h5>
+                <h5 class="info-title">Profile Info</h5>
                 <hr />
 
-                <p class="group-name">Group Name:</p>
-                <p class="group-description">Group Description:</p>
-                <p class="group-members">Group Members:</p><br />
-                <hr />
-                <h5 class="info-title">Members List</h5>
-                <hr />
+                <p class="group-name">Name:</p>
+                <p class="group-description">Description:</p>
+                <!-- <p class="group-members">Group Members:</p><br /> -->
+                <!-- <hr /> -->
+                <!-- <h5 class="info-title">Members List</h5> -->
+                <!-- <hr /> -->
                 <div class="group-members" id="group-members">
-                    <div class="group-member-object">
-                        <div class="group-member-img-obj">
-                            <img src="../file-icon.png" class="responsive-img circle group-member-img" alt="member-profile">
-                        </div>
-                        <div class="member-name">
-                            <span class="member-name-text">Sthembiso Musana</span>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
 
@@ -153,7 +146,7 @@
         
     </div>
 </body>
-<script src="./updateUsers.js">
+<script src="./main.js">
 </script>
 <script src="./addUsers.js"></script>
 </html>
