The server side is done.

--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./signup.css" />
-    <link rel="stylesheet" href="./spinner.css">
-    <title>SignUp</title>
+    <link rel="stylesheet" href="./spinner.css" />
+    <title>Login</title>
 </head>
 <body class="container">
     <div class="signup" id='signup'>
