"Fixed the server search friend bugs"

--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -20,7 +20,7 @@
     <div class="overlay">
         <div class="avatar-overlay">
             <div class="text">
-                <p class="heading-text">Select Avatar for your Acount</p>
+                <p class="heading-text">Select an avatar for your Acount</p>
             </div>
             
             <hr />
@@ -72,5 +72,4 @@
 <script src="./firebase.js"></script>
 <script src="./login.js"></script>
 <script src="./avatar.js"></script>
-
 </html>
