--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./signup.css" />
     <link rel="stylesheet" href="./spinner.css" />
+    <link rel="stylesheet" href="./view-control.css"
 
     <!-- Firebase config for cloud storage -->
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
@@ -72,4 +73,5 @@
 <script src="./firebase.js"></script>
 <script src="./login.js"></script>
 <script src="./avatar.js"></script>
+
 </html>
