The final stage ready for deployment

--- a/UI/main/index.html
+++ b/UI/main/index.html
@@ -17,8 +17,8 @@
         <h1>TND Collab</h1>
     </div>
     <div class="body container">
-        <div class="row">
-            <div class="col card-container" >
+        <div class="show-cards">
+            <div class=" card-container" >
                 <div class="card-piece" id="card-1">
                     <div class="c-image">
                         <img src="./messaging-icon.png" alt="timeline image" class="c-images-data responsive-img"/> 
@@ -31,7 +31,7 @@
 
             </div>
 
-            <div class="col card-container ">
+            <div class=" card-container ">
                 <div class="card-piece" id="card-2">
                     <div class="c-image">
                         <img src="./file-icon.png" alt="timeline image" class="c-images-data responsive-img"/> 
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="col card-container">
+            <div class=" card-container">
                 <div class="card-piece" id="card-3">
                     <div class="c-image">
                         <img src="./TimeLine-icon.png" alt="timeline image" class="c-images-data responsive-img"/> 
