--- a/UI/main/Messaging/messaging.html
+++ b/UI/main/Messaging/messaging.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./spinner.css" />
     <link rel="stylesheet" href="./view-control.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="./favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Firebase config for cloud storage -->
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
