--- a/UI/main/Messaging/signup.html
+++ b/UI/main/Messaging/signup.html
@@ -37,8 +37,8 @@
             <form class='form' id ='signup-form' autocomplete="off">
                 <input name ='username' placeholder="username" type="text" class="browser-default field field1" required/><br />
                 <input name ="email" type='email' placeholder="email" class='browser-default field field1' required/><br />
-                <input name ="password" type='password' placeholder="password" class='browser-default field field1' required/><br />
-                <input type='password' placeholder="confirm password" class="browser-default field field1" required />
+                <input name ="password"  id = 'pass'type='password' placeholder="password" class='browser-default field field1' required/><br />
+                <input name ="cpassword" id="cpassword" type='password' placeholder="confirm password" class="browser-default field field1" required />
                 <input type='submit' value='Sign Up' class='browser-default field submit' />
             </form>
         </div>
